fix: select options have a legible text color

--- a/src/foundry.scss
+++ b/src/foundry.scss
@@ -53,6 +53,9 @@ body.system-cryptomancer {
   optgroup {
     background-color: var(--neutral);
   }
+  option {
+    color: var(--primary);
+  }
 
   /* Specific Selects/Inputs */
   #chat-controls .roll-type-select,
